<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:orientation="vertical">

    <LinearLayout
            android:id="@+id/ll_enter_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginStart="20sp"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

            <EditText
                    android:id="@+id/et_asset_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cf_edit_text_asset"/>

            <EditText
                    android:id="@+id/et_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cf_edit_text_start_date"
                    android:inputType="date"/>

            <EditText
                    android:id="@+id/et_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cf_edit_text_end_date"
                    android:inputType="date"/>
        </LinearLayout>

        <Button
                android:id="@+id/bt_add_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cf_button_open_chart"
                android:layout_weight="3"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/bt_candle_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cf_button_candle_chart" />

        <Button
                android:id="@+id/bt_bar_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cf_button_bar_chart"/>

        <Button
                android:id="@+id/bt_line_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cf_button_line_chart"/>
    </LinearLayout>

    <com.github.mikephil.charting.charts.CandleStickChart
            android:id="@+id/candle_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"/>

    <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

    <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

</LinearLayout>